--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,199 @@
 @tailwind base;
-
 @tailwind components;
-
 @tailwind utilities;
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+:root {
+    --line-height: 50px;
+}
+
+/* Parent element for the sliding words */
+.Words {
+    text-align: left;
+    margin: 0 auto;
+    padding: 80px 0;
+    text-align: center;
+    font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+    font-size: 68px;
+    font-weight: 900;
+    letter-spacing: -2px;
+    text-transform: uppercase;
+    transform: translate3d(0, 0, 0);
+    -webkit-font-smoothing: antialiased;
+    -webkit-font-kerning: normal;
+    -webkit-text-size-adjust: 100%;
+}
+
+/* Paragraph styles */
+.Words p {
+border-left: 3px solid #363535;
+    box-shadow: 0 .5px 15px darkgrey;
+    text-align: start;
+    height: 50px;
+    line-height: 50px;
+    text-shadow: 0 2px 20px rgb(107, 107, 107);
+    padding: 0 10px;
+    transition: all 0.4s ease-in-out;
+    transform: translate3d(0, 0, 0);
+    vertical-align: top;
+    white-space: nowrap;
+}
+.dev-3d{
+    box-shadow: none!important;
+}
+.dev-4{
+    box-shadow: none!important;
+}
+
+/* Each sliding line */
+.Words-line {
+    height: 50px;
+    overflow: hidden;
+    position: relative;
+}
+      
+
+/* 3D Alternating transforms for multi-word block */
+.four-words .Words-line:nth-child(odd) {
+    transform: skew(60deg, -30deg) scaleY(0.66667);
+}
+
+.four-words .Words-line:nth-child(even) {
+    transform: skew(0deg, -30deg) scaleY(1.33333);
+}
+
+/* Left offsets for "Four-Words" Block */
+.four-words .Words-line:nth-child(1) {
+    left: 29px;
+}
+
+.four-words .Words-line:nth-child(2) {
+    left: 58px;
+}
+
+.four-words .Words-line:nth-child(3) {
+    left: 87px;
+}
+
+.four-words .Words-line:nth-child(4) {
+    left: 116px;
+}
+
+.four-words .Words-line:nth-child(5) {
+    left: 145px;
+}
+
+/* Remove extra transforms for responsiveness if needed on mobile */
+@media (max-width: 768px) {
+    :root {
+            --line-height: 40px;
+        }
+    .Words {
+        padding: 40px 0;
+        font-size: 48px;
+        letter-spacing: -1px;
+    }
+              
+
+    .Words p {
+        height: 40px;
+        line-height: 40px;
+        padding: 0 8px;
+    }
+
+    .Words-line {
+        height: 40px;
+    }
+
+    .Words:hover p {
+        transform: translate3d(0, -40px, 0)!important;
+    }
+
+    .four-words .Words-line:nth-child(1) {
+        left: 20px;
+    }
+
+    .four-words .Words-line:nth-child(2) {
+        left: 40px;
+    }
+
+    .four-words .Words-line:nth-child(3) {
+        left: 60px;
+    }
+
+    .four-words .Words-line:nth-child(4) {
+        left: 80px;
+    }
+
+    .four-words .Words-line:nth-child(5) {
+        left: 100px;
+    }
+}
+
+@media (max-width: 480px) {
+    :root {
+            --line-height: 30px;
+        }
+    
+
+    .Words {
+        padding: 20px 0;
+        font-size: 32px;
+        letter-spacing: -0.5px;
+                margin-right: 50px;
+    }
+
+    .Words p {
+        height: 30px;
+        line-height: 30px;
+        padding: 0 6px;
+    }
+
+    .Words-line {
+        height: 30px;
+    }
+
+    .Words:hover p {
+        transform: translate3d(0, -30px, 0)!important;
+    }
+
+    .four-words .Words-line:nth-child(1) {
+        left: 15px;
+    }
+
+    .four-words .Words-line:nth-child(2) {
+        left: 30px;
+    }
+
+    .four-words .Words-line:nth-child(3) {
+        left: 45px;
+    }
+
+    .four-words .Words-line:nth-child(4) {
+        left: 60px;
+    }
+
+    .four-words .Words-line:nth-child(5) {
+        left: 75px;
+    }
+}
+
+/* Hover interaction for sliding text */
+.Words:hover p {
+    transform: translate3d(0, -50px, 0);
+}
+
+/* Background dynamic text styles */
+.background-text {
+    z-index: 1;
+}
+
+.background-text h1 {
+    opacity: 0.1;
+    pointer-events: none;
+    user-select: none;
+}
