--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* in globals.css or tailwind.css */
+html,
 body {
+    overflow-x:visible;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
 }
 :root {
     --line-height: 50px;
@@ -189,7 +191,7 @@ border-left: 3px solid #363535;
 
 /* Background dynamic text styles */
 .background-text {
-    z-index: 1;
+    z-index: 10;
 }
 
 .background-text h1 {
